--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# requirements
 This project doesn't contain any python files. There are no requirements for pip, or python.
 All required packages for java/gojs, etc are contained within the project itself.
 
